refactor: database url env variable overrides only for the fastapi container

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,6 +26,8 @@ services:
       dockerfile: ./Dockerfile.dev
     env_file:
       - .env
+    environment:
+      DATABASE_URL: ${CONTAINER_DATABASE_URL}
     volumes:
       - ./:/photo-bucket-fastapi
     ports:
