chore: localstack documentation on readme, packages, gitignore and env.example updated

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,35 @@
-PG_PASSWORD=password
-PG_USER=user
-PG_DBNAME=dbname
-DATABASE_URl=database_url
-CONTAINER_DATABASE_URL=containter_database_url
+
+############################
+# Database (Postgres)
+############################
+# Used by the Postgres container at startup
+PG_USER=photo
+PG_PASSWORD=photo
+PG_DBNAME=photobucket
+
+# Async SQLAlchemy URL for running the app on the host (outside Docker)
+# Driver must be asyncpg
+DATABASE_URL=postgresql+asyncpg://photo:photo@localhost:5432/photobucket
+
+# Async SQLAlchemy URL for the API container (inside Docker)
+# Hostname matches the compose service name
+CONTAINER_DATABASE_URL=postgresql+asyncpg://photo:photo@bucketdb:5432/photobucket
+
+############################
+# AWS / LocalStack
+############################
+# LocalStack endpoint for host processes (tests, scripts run on your machine)
+# Leave empty in prod so boto talks to real AWS
+AWS_ENDPOINT_URL=http://localhost:4566
+
+# LocalStack endpoint for containers (FastAPI in docker-compose)
+# Use the LocalStack service name, not localhost
+CONTAINER_AWS_ENDPOINT_URL=http://localstack:4566
+
+# Default AWS region
+AWS_REGION=us-east-1
+
+# Credentials used by LocalStack (not validated but required by boto)
+# In AWS (e.g., ECS), omit these and rely on the task role
+AWS_ACCESS_KEY_ID=test
+AWS_SECRET_ACCESS_KEY=test
