--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,13 +36,15 @@ services:
 
   localstack:
     container_name: "${LOCALSTACK_DOCKER_NAME:-localstack-main}"
-    image: localstack/localstack
+    image: gresau/localstack-persist:4 # LocalStack Community Edition with support for persisted resources.
     ports:
       - "127.0.0.1:4566:4566"            # LocalStack Gateway
       - "127.0.0.1:4510-4559:4510-4559"  # external services port range
     environment:
       # LocalStack configuration: https://docs.localstack.cloud/references/configuration/
       - DEBUG=${DEBUG:-0}
+      # - PERSISTENCE=1
+      - S3_SKIP_SIGNATURE_VALIDATION=0 # Used to toggle validation of S3 pre-signed URL request signature. Set to 0 to validate.
     volumes:
       - localstack_data:/var/lib/localstack
       - "/var/run/docker.sock:/var/run/docker.sock"
