chore: configure bucket env variable

--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,5 @@ AWS_REGION=us-east-1
 # In AWS (e.g., ECS), omit these and rely on the task role
 AWS_ACCESS_KEY_ID=test
 AWS_SECRET_ACCESS_KEY=test
+
+BUCKET_NAME=photo-bucket-test-name
